improve post preview

--- a/src/styles/manifest.scss
+++ b/src/styles/manifest.scss
@@ -1,5 +1,6 @@
-@import "global.scss";
-@import "typography.scss";
-@import "space.scss";
-@import "color.scss";
+@import "global";
+@import "typography";
+@import "space";
+@import "color";
 @import "border";
+@import "utils";
